--- a/Biocell/contact-us.html
+++ b/Biocell/contact-us.html
@@ -325,8 +325,8 @@
 								</div>
 								<h2 class="title">Office Location</h2>
 							</div>
-							<div class="icon-content">
-								<p>NISHANBARI, KALATIA, KERANIGANJ, DHAKA</p>
+							<div class="icon-content contact-location">
+								<p>Nishanbari, Kalatia, Keraniganj, Dhaka</p>
 							</div>
 						</div>
 					</div>
@@ -380,7 +380,7 @@
 			<div class="container-fluid">
 				<div class="map-iframe map">
 					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1826.3432940645139!2d90.2948581!3d23.7228837!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x375595dc0855a491%3A0x50d75cbe367e013f!2sBiocell%20Ayurvedic%20Ltd.!5e0!3m2!1sen!2sbd!4v1723982558896!5m2!1sen!2sbd" style="border:0; width:100%; min-height:100%; margin-bottom: -8px;" allowfullscreen></iframe>
-					<span class="logo-badge"><img class="logo" src="image/biocell-logo.jpg" alt=""> <img src="images/star.png" alt="" class="shap"></span>
+					<span class="logo-badge"><img class="logo" src="image/biocell-logo-transparent.png" alt=""> <img src="images/star.png" alt="" class="shap"></span>
 				</div>
 			</div>
 		</div>
