--- a/Biocell/index.html
+++ b/Biocell/index.html
@@ -664,7 +664,7 @@
                 <div class="swiper-slide">
                   <div class="category-product box-hover">
                     <h3 class="title">
-                      <a href="shop-with-category.html">Blood Pressure</a>
+                      <a href="javascript:void(0);">Blood Pressure</a>
                     </h3>
                     <img src="image/19.jfif" alt="" />
                   </div>
@@ -682,7 +682,7 @@
                 <div class="swiper-slide">
                   <div class="category-product box-hover">
                     <h3 class="title">
-                      <a href="shop-with-category.html">Iteching and Rashes</a>
+                      <a href="javascript:void(0);">Iteching and Rashes</a>
                     </h3>
                     <img src="image/17.jfif" alt="" />
                   </div>
@@ -690,7 +690,7 @@
                 <div class="swiper-slide">
                   <div class="category-product box-hover">
                     <h3 class="title">
-                      <a href="shop-with-category.html">Abdominal Pain</a>
+                      <a href="javascript:void(0);">Abdominal Pain</a>
                     </h3>
                     <img src="image/16.jfif" alt="" />
                   </div>
@@ -703,6 +703,24 @@
                       >
                     </h3>
                     <img src="image/15.jpg" alt="" />
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="category-product box-hover">
+                    <h3 class="title">
+                      <a href="javascript:void(0);">Blood Pressure</a>
+                    </h3>
+                    <img src="image/19.jfif" alt="" />
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="category-product box-hover">
+                    <h3 class="title">
+                      <a href="shop-with-category.html"
+                        >Arthralgia or Joint Pain</a
+                      >
+                    </h3>
+                    <img src="image/18.jfif" alt="" />
                   </div>
                 </div>
               </div>
@@ -740,11 +758,11 @@
                       </div>
                       <div class="dz-content">
                         <h2 class="title">
-                          <a href="shop-list.html">Enfort (200ml)</a>
+                          <a href="javascript:void(0);">Enfort (200ml)</a>
                         </h2>
                         <h6 class="price">
-                          $1099
-                          <del>$659</del>
+                          Tk 1099
+                          <del>Tk 659</del>
                         </h6>
                       </div>
                     </div>
@@ -756,11 +774,11 @@
                       </div>
                       <div class="dz-content">
                         <h2 class="title">
-                          <a href="shop-list.html">Enfort (200ml)</a>
+                          <a href="javascript:void(0);">Enfort (200ml)</a>
                         </h2>
                         <h6 class="price">
-                          $1099
-                          <del>$659</del>
+                          Tk 1099
+                          <del>Tk 659</del>
                         </h6>
                       </div>
                     </div>
@@ -1075,11 +1093,11 @@
                           </div>
                           <div class="dz-content">
                             <h2 class="title">
-                              <a href="shop-list.html">Vineyard Reach (m)</a>
+                              <a href="javascript:void(0);">Vineyard Reach (m)</a>
                             </h2>
                             <span class="price">
-                              $659
-                              <del>$1099</del>
+                              Tk 659
+                              <del>Tk 1099</del>
                             </span>
                           </div>
                         </div>
@@ -1104,8 +1122,8 @@
                               >
                             </h2>
                             <span class="price">
-                              $759
-                              <del>$1199</del>
+                              Tk 759
+                              <del>Tk 1199</del>
                             </span>
                           </div>
                         </div>
@@ -1130,8 +1148,8 @@
                               >
                             </h2>
                             <span class="price">
-                              $459
-                              <del>$999</del>
+                              Tk 459
+                              <del>Tk 999</del>
                             </span>
                           </div>
                         </div>
@@ -1151,11 +1169,11 @@
                           </div>
                           <div class="dz-content">
                             <h2 class="title">
-                              <a href="shop-list.html">Long Vine Flora (m)</a>
+                              <a href="javascript:void(0);">Long Vine Flora (m)</a>
                             </h2>
                             <span class="price">
-                              $989
-                              <del>$2199</del>
+                              Tk 989
+                              <del>Tk 2199</del>
                             </span>
                           </div>
                         </div>
@@ -1175,11 +1193,11 @@
                           </div>
                           <div class="dz-content">
                             <h2 class="title">
-                              <a href="shop-list.html">Long Vine Flora (m)</a>
+                              <a href="javascript:void(0);">Long Vine Flora (m)</a>
                             </h2>
                             <span class="price">
-                              $565
-                              <del>$1099</del>
+                              Tk 565
+                              <del>Tk 1099</del>
                             </span>
                           </div>
                         </div>
@@ -1204,8 +1222,8 @@
                               >
                             </h2>
                             <span class="price">
-                              $659
-                              <del>$1099</del>
+                              Tk 659
+                              <del>Tk 1099</del>
                             </span>
                           </div>
                         </div>
@@ -1315,11 +1333,11 @@
                 <div class="gallery-item m-b30">
                   <div class="dz-box post-1 box-hover">
                     <a
-                      href="image/20.jpg"
-                      data-src="image/20.jpg"
+                      href="image/_MG_3050.jpg"
+                      data-src="image/_MG_3050.jpg"
                       class="dz-media lg-item"
                     >
-                      <img src="image/20.jpg" alt="/" />
+                      <img src="image/_MG_3050.jpg" alt="/" />
                       <span class="view-btn lightimg"></span>
                     </a>
                   </div>
@@ -1327,11 +1345,11 @@
                 <div class="gallery-item m-b30">
                   <div class="dz-box post-2 box-hover">
                     <a
-                      href="image/20.jpg"
-                      data-src="image/20.jpg"
+                      href="image/_MG_3244.jpg"
+                      data-src="image/_MG_3244.jpg"
                       class="dz-media lg-item"
                     >
-                      <img src="image/20.jpg" alt="/" />
+                      <img src="image/_MG_3244.jpg" alt="/" />
                       <span class="view-btn lightimg"></span>
                     </a>
                   </div>
@@ -1339,11 +1357,11 @@
                 <div class="gallery-item">
                   <div class="dz-box post-3 box-hover">
                     <a
-                      href="image/21.jpg"
-                      data-src="image/21.jpg"
+                      href="image/_MG_2796.jpg"
+                      data-src="image/_MG_2796.jpg"
                       class="dz-media lg-item"
                     >
-                      <img src="image/21.jpg" alt="/" />
+                      <img src="image/_MG_2796.jpg" alt="/" />
                       <span class="view-btn lightimg"></span>
                     </a>
                   </div>
@@ -1351,11 +1369,11 @@
                 <div class="gallery-item">
                   <div class="dz-box post-4 box-hover">
                     <a
-                      href="image/21.jpg"
-                      data-src="image/21.jpg"
+                      href="image/_MG_3166.jpg"
+                      data-src="image/_MG_3166.jpg"
                       class="dz-media lg-item"
                     >
-                      <img src="image/21.jpg" alt="/" />
+                      <img src="image/_MG_3166.jpg" alt="/" />
                       <span class="view-btn lightimg"></span>
                     </a>
                   </div>
@@ -1365,11 +1383,11 @@
                 <div class="gallery-item">
                   <div class="dz-box post-5 box-hover">
                     <a
-                      href="image/22.jpg"
-                      data-src="image/22.jpg"
+                      href="image/_MG_3226.jpg"
+                      data-src="image/_MG_3226.jpg"
                       class="dz-media lg-item"
                     >
-                      <img src="image/22.jpg" alt="/" />
+                      <img src="image/_MG_3226.jpg" alt="/" />
                       <span class="view-btn lightimg"></span>
                     </a>
                   </div>
@@ -1379,11 +1397,11 @@
                 <div class="gallery-item m-b30">
                   <div class="dz-box post-6 box-hover">
                     <a
-                      href="image/20.jpg"
-                      data-src="image/20.jpg"
+                      href="image/_MG_2792.JPG"
+                      data-src="image/_MG_2792.JPG"
                       class="dz-media lg-item"
                     >
-                      <img src="image/20.jpg" alt="/" />
+                      <img src="image/_MG_2792.JPG" alt="/" />
                       <span class="view-btn lightimg"></span>
                     </a>
                   </div>
@@ -1403,11 +1421,11 @@
                 <div class="gallery-item">
                   <div class="dz-box post-8 box-hover">
                     <a
-                      href="image/21.jpg"
-                      data-src="image/21.jpg"
+                      href="image/_MG_3002.jpg"
+                      data-src="image/_MG_3002.jpg"
                       class="dz-media lg-item"
                     >
-                      <img src="image/21.jpg" alt="/" />
+                      <img src="image/_MG_3002.jpg" alt="/" />
                       <span class="view-btn lightimg"></span>
                     </a>
                   </div>
@@ -1415,11 +1433,11 @@
                 <div class="gallery-item">
                   <div class="dz-box post-9 box-hover">
                     <a
-                      href="image/21.jpg"
-                      data-src="image/21.jpg"
+                      href="image/_MG_2793.jpg"
+                      data-src="image/_MG_2793.jpg"
                       class="dz-media lg-item"
                     >
-                      <img src="image/21.jpg" alt="/" />
+                      <img src="image/_MG_2793.jpg" alt="/" />
                       <span class="view-btn lightimg"></span>
                     </a>
                   </div>
@@ -1486,11 +1504,11 @@
                     </div>
                     <div class="dz-content">
                       <h2 class="title">
-                        <a href="shop-list.html">Vineyard Reach (m)</a>
+                        <a href="javascript:void(0);">Vineyard Reach (m)</a>
                       </h2>
                       <span class="price">
-                        $1099
-                        <del>$659</del>
+                        Tk 1099
+                        <del>Tk 659</del>
                       </span>
                     </div>
                   </div>
@@ -1505,11 +1523,11 @@
                     </div>
                     <div class="dz-content">
                       <h2 class="title">
-                        <a href="shop-list.html">TallS talk Gardens (m)</a>
+                        <a href="javascript:void(0);">TallS talk Gardens (m)</a>
                       </h2>
                       <span class="price">
-                        <del>$659</del>
-                        $1099
+                        <del>Tk 659</del>
+                        Tk 1099
                       </span>
                     </div>
                   </div>
@@ -1520,15 +1538,15 @@
                 >
                   <div class="shop-card">
                     <div class="dz-media">
-                      <img src="images/shop/product/3.png" alt="image" />
+                      <img src="image/dummy.jfif" alt="image" />
                     </div>
                     <div class="dz-content">
                       <h2 class="title">
-                        <a href="shop-list.html">Endless Stems Gardens (m)</a>
+                        <a href="javascript:void(0);">Endless Stems Gardens (m)</a>
                       </h2>
                       <span class="price">
-                        <del>$659</del>
-                        $1099
+                        <del>Tk 659</del>
+                        Tk 1099
                       </span>
                     </div>
                   </div>
@@ -1539,15 +1557,15 @@
                 >
                   <div class="shop-card">
                     <div class="dz-media">
-                      <img src="images/shop/product/4.png" alt="image" />
+                      <img src="image/dummy.jfif" alt="image" />
                     </div>
                     <div class="dz-content">
                       <h2 class="title">
-                        <a href="shop-list.html">Long Vine Flora (m)</a>
+                        <a href="javascript:void(0);">Long Vine Flora (m)</a>
                       </h2>
                       <span class="price">
-                        <del>$659</del>
-                        $1099
+                        <del>Tk 659</del>
+                        Tk 1099
                       </span>
                     </div>
                   </div>
@@ -1558,15 +1576,15 @@
                 >
                   <div class="shop-card">
                     <div class="dz-media">
-                      <img src="images/shop/product/5.png" alt="image" />
+                      <img src="image/dummy.jfif" alt="image" />
                     </div>
                     <div class="dz-content">
                       <h2 class="title">
-                        <a href="shop-list.html">Long Vine Flora (m)</a>
+                        <a href="javascript:void(0);">Long Vine Flora (m)</a>
                       </h2>
                       <span class="price">
-                        <del>$659</del>
-                        $1099
+                        <del>Tk 659</del>
+                        Tk 1099
                       </span>
                     </div>
                   </div>
@@ -1577,15 +1595,15 @@
                 >
                   <div class="shop-card">
                     <div class="dz-media">
-                      <img src="images/shop/product/6.png" alt="image" />
+                      <img src="image/dummy.jfif" alt="image" />
                     </div>
                     <div class="dz-content">
                       <h2 class="title">
-                        <a href="shop-list.html">Bacopa sutera cordata (m)</a>
+                        <a href="javascript:void(0);">Bacopa sutera cordata (m)</a>
                       </h2>
                       <span class="price">
-                        <del>$659</del>
-                        $1099
+                        <del>Tk 659</del>
+                        Tk 1099
                       </span>
                     </div>
                   </div>
@@ -1596,7 +1614,7 @@
                 >
                   <div class="shop-card">
                     <div class="dz-media">
-                      <img src="images/shop/product/7.png" alt="image" />
+                      <img src="image/dummy.jfif" alt="image" />
                     </div>
                     <div class="dz-content">
                       <h2 class="title">
@@ -1605,8 +1623,8 @@
                         >
                       </h2>
                       <span class="price">
-                        <del>$659</del>
-                        $1099
+                        <del>Tk 659</del>
+                        Tk 1099
                       </span>
                     </div>
                   </div>
@@ -1617,15 +1635,15 @@
                 >
                   <div class="shop-card">
                     <div class="dz-media">
-                      <img src="images/shop/product/8.png" alt="image" />
+                      <img src="image/dummy.jfif" alt="image" />
                     </div>
                     <div class="dz-content">
                       <h2 class="title">
-                        <a href="shop-list.html">Large Majesty Palm (m)</a>
+                        <a href="javascript:void(0);">Large Majesty Palm (m)</a>
                       </h2>
                       <span class="price">
-                        $1099
-                        <del>$659</del>
+                        Tk 1099
+                        <del>Tk 659</del>
                       </span>
                     </div>
                   </div>
@@ -1656,7 +1674,7 @@
             <div class="col-lg-5 order-lg-1 order-2 wow fadeInUp" data-wow-delay="0.2s">
               <div class="side-content">
                 <div class="about-thumb">
-                  <img src="image/review.jfif" alt="">
+                  <img src="image/review.jpg" alt="">
                 </div>
               </div>
             </div>
@@ -2481,7 +2499,7 @@ boxes.forEach((box, index) => {
 
   let timerId = setInterval(() => {
     currentNumber += increment;
-    box.textContent = `${Math.floor(currentNumber)}+`;
+    box.textContent = ` ${Math.floor(currentNumber)}+`;
 
     if (currentNumber >= targetNumber) {
       clearInterval(timerId);
