--- a/Biocell/single-post.html
+++ b/Biocell/single-post.html
@@ -323,10 +323,7 @@
 						/></a>
 					</div>
 					<p class="text">
-						Transform your website into a dynamic online storefront with
-						PlantZone, where style seamlessly meets functionality,
-						ensuring a captivating and user-friendly eCommerce journey
-						through the lush world of plants.
+Biocell Ayurvedic Ltd. is guided by the principle that "human service is the best practice", reflecting our commitment to serving people and honoring the creations of Almighty Allah. Our plans include establishing an international standard naturopathy and Ayurvedic hospital and modern research institutes.
 					</p>
 					<h4 class="dz-title">Contact Us</h4>
 
