--- a/PlantZone-v1.0-15_July_2024/index.html
+++ b/PlantZone-v1.0-15_July_2024/index.html
@@ -1485,17 +1485,14 @@
                   /></a>
                 </div>
                 <p class="text">
-                  Transform your website into a dynamic online storefront with
-                  PlantZone, where style seamlessly meets functionality,
-                  ensuring a captivating and user-friendly eCommerce journey
-                  through the lush world of plants.
+Biocell Ayurvedic Ltd. is guided by the principle that "human service is the best practice", reflecting our commitment to serving people and honoring the creations of Almighty Allah. Our plans include establishing an international standard naturopathy and Ayurvedic hospital and modern research institutes.
                 </p>
                 <h4 class="dz-title">Contact Us</h4>
 
                 <ul class="contact-address">
-                  <li>785 15h Street, Office 478 Berlin, De 81566</li>
-                  <li>Demo@gmail.com</li>
-                  <li>+1012 3456 789</li>
+                  <li>56/2 PANTHAPATH, 9TH FLOOR, DHAKA</li>
+                  <li>biocell@uni1group.com</li>
+                  <li>+880-187-940-1510,  +880-132-964-3555</li>
                 </ul>
 
                 <h4 class="dz-title">Newsletter</h4>
@@ -1547,26 +1544,26 @@
                   <ul>
                     <li>
                       <a
-                        href="https://www.facebook.com/dexignzone"
+                        href="https://www.facebook.com"
                         target="_blank"
                       >
                         <i class="fa-brands fa-facebook-f"></i>
                       </a>
                     </li>
                     <li>
-                      <a href="https://twitter.com/dexignzones">
+                      <a href="https://twitter.com/">
                         <i class="fa-brands fa-twitter"></i>
                       </a>
                     </li>
                     <li>
                       <a
-                        href="https://www.linkedin.com/showcase/3686700/admin/"
+                        href="https://www.linkedin.com/"
                       >
                         <i class="fa-brands fa-linkedin"></i>
                       </a>
                     </li>
                     <li>
-                      <a href="https://www.instagram.com/dexignzone/">
+                      <a href="https://www.instagram.com">
                         <i class="fa-brands fa-instagram"></i>
                       </a>
                     </li>
