--- a/Biocell/contact-us.html
+++ b/Biocell/contact-us.html
@@ -247,10 +247,7 @@
 						/></a>
 					</div>
 					<p class="text">
-						Transform your website into a dynamic online storefront with
-						PlantZone, where style seamlessly meets functionality,
-						ensuring a captivating and user-friendly eCommerce journey
-						through the lush world of plants.
+Biocell Ayurvedic Ltd. is guided by the principle that "human service is the best practice", reflecting our commitment to serving people and honoring the creations of Almighty Allah. Our plans include establishing an international standard naturopathy and Ayurvedic hospital and modern research institutes.
 					</p>
 					<h4 class="dz-title">Contact Us</h4>
 
@@ -326,6 +323,19 @@
 								<h2 class="title">Office Location</h2>
 							</div>
 							<div class="icon-content contact-location">
+								<p>56/2 Panthapath, 9th Floor, Dhaka</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-3 col-sm-6 m-b30">
+						<div class="icon-bx-wraper style-7">
+							<div class="icon-bx"> 
+								<div class="icon-cell">
+									<i class="flaticon flaticon-global"></i>
+								</div>
+								<h2 class="title">Factory Location</h2>
+							</div>
+							<div class="icon-content contact-location">
 								<p>Nishanbari, Kalatia, Keraniganj, Dhaka</p>
 							</div>
 						</div>
@@ -340,7 +350,6 @@
 							</div>
 							<div class="icon-content">
 								<p>biocell@uni1group.com</p>
-								<p>biocell@uni1group.com</p>
 							</div>
 						</div>
 					</div>
@@ -353,22 +362,8 @@
 								<h2 class="title">Call Us Directly</h2>
 							</div>
 							<div class="icon-content">
-								<p>+880-132-964-3555</p>
 								<p>+880-187-940-1510</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-3 col-sm-6 m-b30">
-						<div class="icon-bx-wraper style-7">
-							<div class="icon-bx"> 
-								<div class="icon-cell">
-									<i class="flaticon flaticon-chat-8"></i>
-								</div>
-								<h2 class="title">join Our Team</h2>
-							</div>
-							<div class="icon-content">
-								<p>facebook.com/biocellay</p>
-								<p>facebook.com/biocellay</p>
+								<p>+880-132-964-3555</p>
 							</div>
 						</div>
 					</div>
@@ -485,7 +480,7 @@
 					data-wow-delay="0.1s"
 				>
 					<div class="widget widget_about me-2">
-						<h6>Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. </h6>
+						<h6>Biocell Ayurvedic Ltd. manufactures and distributes state-of-the-art medicines, focusing on quality and affordability. We are dedicated to cultivating medicinal plants on 20 acres of land in a natural environment, utilizing scientific methods to ensure high-quality Ayurvedic and natural medicines. Our programs emphasize public health awareness and welfare activities. We believe that through curiosity and dedication, we can contribute to a healthier, disease-free, and prosperous society. </h6>
 					</div>
 					<div class="row">
 						<div
