--- a/Biocell/credentials.html
+++ b/Biocell/credentials.html
@@ -324,17 +324,14 @@
                   /></a>
                 </div>
                 <p class="text">
-                  Transform your website into a dynamic online storefront with
-                  PlantZone, where style seamlessly meets functionality,
-                  ensuring a captivating and user-friendly eCommerce journey
-                  through the lush world of plants.
+Biocell Ayurvedic Ltd. is guided by the principle that "human service is the best practice", reflecting our commitment to serving people and honoring the creations of Almighty Allah. Our plans include establishing an international standard naturopathy and Ayurvedic hospital and modern research institutes.
                 </p>
                 <h4 class="dz-title">Contact Us</h4>
 
                 <ul class="contact-address">
-                  <li>785 15h Street, Office 478 Berlin, De 81566</li>
-                  <li>Demo@gmail.com</li>
-                  <li>+1012 3456 789</li>
+                  <li>56/2 PANTHAPATH, 9TH FLOOR, DHAKA</li>
+                  <li>biocell@uni1group.com</li>
+                  <li>+880-187-940-1510,  +880-132-964-3555</li>
                 </ul>
 
                 <h4 class="dz-title">Follow Us</h4>
@@ -342,26 +339,26 @@
                   <ul>
                     <li>
                       <a
-                        href="https://www.facebook.com/dexignzone"
+                        href="https://www.facebook.com"
                         target="_blank"
                       >
                         <i class="fa-brands fa-facebook-f"></i>
                       </a>
                     </li>
                     <li>
-                      <a href="https://twitter.com/dexignzones">
+                      <a href="https://twitter.com/">
                         <i class="fa-brands fa-twitter"></i>
                       </a>
                     </li>
                     <li>
                       <a
-                        href="https://www.linkedin.com/showcase/3686700/admin/"
+                        href="https://www.linkedin.com/"
                       >
                         <i class="fa-brands fa-linkedin"></i>
                       </a>
                     </li>
                     <li>
-                      <a href="https://www.instagram.com/dexignzone/">
+                      <a href="https://www.instagram.com">
                         <i class="fa-brands fa-instagram"></i>
                       </a>
                     </li>
@@ -473,7 +470,7 @@
                 data-wow-delay="0.1s"
               >
                 <div class="widget widget_about me-2">
-                  <h6>Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. Biocell is one of the best herbal medice companies in Bangladesh. </h6>
+                  <h6>Biocell Ayurvedic Ltd. manufactures and distributes state-of-the-art medicines, focusing on quality and affordability. We are dedicated to cultivating medicinal plants on 20 acres of land in a natural environment, utilizing scientific methods to ensure high-quality Ayurvedic and natural medicines. Our programs emphasize public health awareness and welfare activities. We believe that through curiosity and dedication, we can contribute to a healthier, disease-free, and prosperous society.  </h6>
                 </div>
                 <div class="row">
                   <div
