--- a/Biocell/about-us.html
+++ b/Biocell/about-us.html
@@ -311,95 +311,116 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 		</div>
 		<!--Banner End-->
 
-		<section class="content-inner overflow-hidden">
+      <section class="content-inner overflow-hidden">
 			<div class="container">
-				<div class="row align-items-center">
-					<div class="col-lg-6 m-b30">
-						<div class="row g-xl-2 g-md-2 g-3">
-							<div class="col-lg-12 wow fadeInUp" data-wow-delay="0.6s">
-								<div class="about-thumb">
-									<img src="image/31.jfif" alt="" class="rounded"> 
-								</div>
+			  <div class="row align-items-center">
+				 <div class="col-lg-6 m-b30">
+					<div class="row g-xl-2 g-md-2 g-3">
+					  <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.6s">
+						 <div class="about-thumb">
+							<img src="images-biocell/_MG_3244.JPG" alt="" class="rounded"> 
+						 </div>
+					  </div>
+					  <div class="col-xl-4 col-lg-4 col-sm-4 col-4 wow fadeInUp" data-wow-delay="0.5s">
+						 <div class="about-thumb">
+							<img src="image/equipments/equipment01.png" alt="" class="rounded">
+						 </div>
+					  </div>
+					  <div class="col-xl-8 col-lg-8 col-sm-8 col-8 wow fadeInUp" data-wow-delay="0.4s">
+						 <div class="about-thumb">
+							<img src="images-biocell/_MG_3166.JPG" alt="" class="rounded">
+						 </div>
+					  </div>
+					</div>
+				 </div>	
+				 <div class="col-lg-6">
+					<div class="section-head wow fadeInUp m-md-r100" data-wow-delay="0.1s">
+					  <h2 class="title">Our passion for natural healing</h2>
+					  <p>Welcome to Biocell, where nature meets science to bring you the finest herbal medicines. At Biocell, we are dedicated to harnessing the power of nature to promote health and well-being. Our mission is to provide high-quality, effective, and safe herbal remedies that support a healthy lifestyle.
+					  </p>	
+					</div>
+					<div class="row justify-content-center">
+					  <div class="col-lg-6 col-md-6 col-sm-6  m-b30">
+						 <div class="icon-bx-wraper style-5 partner">
+							<div class="icon-media"> 
+							  <i class="fa-solid fa-circle-check"></i>
 							</div>
-							<div class="col-xl-4 col-lg-4 col-sm-4 col-4 wow fadeInUp" data-wow-delay="0.5s">
-								<div class="about-thumb">
-									<img src="images/about/pic5.jpg" alt="" class="rounded">
-								</div>
+							<div class="icon-content">
+							  <h3 class="title">Independent Business</h3>
 							</div>
-							<div class="col-xl-8 col-lg-8 col-sm-8 col-8 wow fadeInUp" data-wow-delay="0.4s">
-								<div class="about-thumb">
-									<img src="images/about/pic4.jpg" alt="" class="rounded">
-								</div>
+						 </div>
+					  </div>
+					  <div class="col-lg-6 col-md-6 col-sm-6  m-b30">
+						 <div class="icon-bx-wraper style-5 partner">
+							<div class="icon-media"> 
+							  <i class="fa-solid fa-circle-check"></i>
 							</div>
-						</div>
-					</div>	
-					<div class="col-lg-6">
-						<div class="section-head wow fadeInUp m-md-r100" data-wow-delay="0.1s">
-							<h2 class="title">Growing Green, Nurturing Life</h2>
-							<p>At Biocell, we are on a mission to redefine fashion by blending style, quality, and individuality into every garment we offer. We believe that what you wear is an extension of your unique personality, and it should reflect your values and aspirations.</p>	
-						</div>
-						<div class="row justify-content-center">
-							<div class="col-lg-6 col-md-6 col-sm-6  m-b30">
-								<div class="icon-bx-wraper style-5">
-									<div class="icon-media"> 
-										<i class="fab fa-instagram"></i>
-									</div>
-									<div class="icon-content">
-										<h3 class="title">Eco Friendly Product</h3>
-									</div>
-								</div>
+							<div class="icon-content">
+							  <h3 class="title">Respect & Recognition</h3>
 							</div>
-							<div class="col-lg-6 col-md-6 col-sm-6  m-b30">
-								<div class="icon-bx-wraper style-5">
-									<div class="icon-media"> 
-										<i class="fab fa-instagram"></i>
-									</div>
-									<div class="icon-content">
-										<h3 class="title">Easy To Clean And Maintain</h3>
-									</div>
-								</div>
+						 </div>
+					  </div>
+					  <div class="col-lg-6 col-md-6  col-sm-6 m-b30">
+						 <div class="icon-bx-wraper style-5 partner">
+							<div class="icon-media"> 
+							  <i class="fa-solid fa-circle-check"></i>
 							</div>
-							<div class="col-lg-6 col-md-6  col-sm-6 m-b30">
-								<div class="icon-bx-wraper style-5">
-									<div class="icon-media"> 
-										<i class="fab fa-instagram"></i>
-									</div>
-									<div class="icon-content">
-										<h4 class="title">Premium Finish Quality</h4>
-									</div>
-								</div>
+							<div class="icon-content">
+							  <h4 class="title">Smart Business</h4>
 							</div>
-							<div class="col-lg-6 col-md-6  col-sm-6 m-b30">
-								<div class="icon-bx-wraper style-5">
-									<div class="icon-media"> 
-										<i class="fab fa-instagram"></i>
-									</div>
-									<div class="icon-content">
-										<h4 class="title">Moisture Proof Product</h4>
-									</div>
-								</div>
+						 </div>
+					  </div>
+					  <div class="col-lg-6 col-md-6  col-sm-6 m-b30">
+						 <div class="icon-bx-wraper style-5 partner">
+							<div class="icon-media"> 
+							  <i class="fa-solid fa-circle-check"></i>
 							</div>
-						</div>
-						<a class="btn btn-outline-secondary btn-lg white-btn" href="product-default.html">View Details</a>
-					</div>	
-				</div>
+							<div class="icon-content">
+							  <h4 class="title">Technology Driven</h4>
+							</div>
+						 </div>
+					  </div>
+					  <div class="col-lg-6 col-md-6  col-sm-6 m-b30">
+						 <div class="icon-bx-wraper style-5 partner">
+							<div class="icon-media"> 
+							  <i class="fa-solid fa-circle-check"></i>
+							</div>
+							<div class="icon-content">
+							  <h4 class="title">Smart Management</h4>
+							</div>
+						 </div>
+					  </div>
+					  <div class="col-lg-6 col-md-6  col-sm-6 m-b30">
+						 <div class="icon-bx-wraper style-5 partner">
+							<div class="icon-media"> 
+							  <i class="fa-solid fa-circle-check"></i>
+							</div>
+							<div class="icon-content">
+							  <h4 class="title">Multiple Projects</h4>
+							</div>
+						 </div>
+					  </div>
+					</div>
+					<a class="btn btn-outline-secondary btn-lg white-btn" href="product-default.html">Apply Now</a>
+				 </div>	
+			  </div>
 			</div>
-
-					
-		<div class="right-text-bar">
+	
+				 
+		 <div class="right-text-bar">
 			<ul>
-				<li><img src="image/pic2.png" alt="" /></li>
-				<li><img src="image/1 (1).png" alt="" /></li>
+			  <li><img src="image/pic2.png" alt="" /></li>
+			  <li><img src="image/1 (1).png" alt="" /></li>
 			</ul>
-		</div>
-		<div class="left-side-image">
+		 </div>
+		 <div class="left-side-image">
 			<ul>
-				<li><img src="image/9.jfif" alt="" /></li>
-				<li><img src="image/10.jfif" alt="" /></li>
+			  <li><img src="image/9.jfif" alt="" /></li>
+			  <li><img src="image/10.jfif" alt="" /></li>
 			</ul>
-		</div>
-
-		</section>	
+		 </div>
+	
+		 </section>	
 
 
 		<!--countdown section-->
@@ -409,7 +430,8 @@ Biocell Ayurvedic Ltd. is guided by the principle that "human service is the bes
 					<h2 class="title text-white wow flipInX" data-wow-delay="0.4s">Our Story of Cultivating Beauty and Growth	</h2>			
 				</div>
 				<ul class="list-check style-2">
-					<li>Our Botanical Journey: Tracing our passion from roots to flourishing expertise.</li>
+					<li>Our Story:
+						Founded with a passion for natural healing, Biocell has grown into a trusted name in herbal medicine. Our journey began with a simple belief: that nature holds the key to wellness. Over the years, we have combined traditional knowledge with modern science to create products that are both time-tested and innovative.</li>
 					<li>The Green Difference: Innovative care and personalized approaches set us apart.</li>
 					<li>Meet Our Plant Whisperers: Dedicated to fostering flourishing ecosystems and green happiness.</li>
 				</ul>	
